--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
             <div class="scroller-container">
                 <div class="scroller-inner">
-                    <img src="C:\Users\raina\OneDrive\Pictures\Screenshots 1\placeholder1.png" alt="Performance photo 1">
+                    <img src="placeholder1.png" alt="Performance photo 1">
                     <img src="C:\Users\raina\OneDrive\Pictures\Screenshots 1\placeholder2.png" alt="Performance photo 2">
                     <img src="C:\Users\raina\OneDrive\Pictures\Screenshots 1\placeholder3.png" alt="Performance photo 3">
                     <img src="C:\Users\raina\OneDrive\Pictures\Screenshots 1\placeholder4.png" alt="Performance photo 4">
