--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div id="particles-js"></div>
 
         <div class="hero-content">
-            <img src="C:\Users\raina\OneDrive\Pictures\Screenshots 1\sagar.png" alt="Your Artist Name" class="artist-image animate-on-scroll">
+            <img src="sagar.png" alt="Your Artist Name" class="artist-image animate-on-scroll">
             <h1 class="animate-on-scroll">Sagar Raina</h1>
             <p class="tagline animate-on-scroll">Soulful Singer for Unforgettable Events</p>
             <a href="#contact" class="button animate-on-scroll">Book Me</a>
