--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
             <div class="scroller-container">
                 <div class="scroller-inner">
                     <img src="placeholder1.png" alt="Performance photo 1">
-                    <img src="C:\Users\raina\OneDrive\Pictures\Screenshots 1\placeholder2.png" alt="Performance photo 2">
-                    <img src="C:\Users\raina\OneDrive\Pictures\Screenshots 1\placeholder3.png" alt="Performance photo 3">
-                    <img src="C:\Users\raina\OneDrive\Pictures\Screenshots 1\placeholder4.png" alt="Performance photo 4">
-                    <img src="C:\Users\raina\OneDrive\Pictures\Screenshots 1\placeholder5.png" alt="Performance photo 5">
-                    <img src="C:\Users\raina\OneDrive\Pictures\Screenshots 1\placeholder6.png" alt="Performance photo 6">
-                    <img src="C:\Users\raina\OneDrive\Pictures\Screenshots 1\placeholder7.png" alt="Performance photo 7">
-                    <img src="C:\Users\raina\OneDrive\Pictures\Screenshots 1\placeholder8.png" alt="Performance photo 8">
+                    <img src="placeholder2.png" alt="Performance photo 2">
+                    <img src="placeholder3.png" alt="Performance photo 3">
+                    <img src="placeholder4.png" alt="Performance photo 4">
+                    <img src="placeholder5.png" alt="Performance photo 5">
+                    <img src="placeholder6.png" alt="Performance photo 6">
+                    <img src="placeholder7.png" alt="Performance photo 7">
+                    <img src="placeholder8.png" alt="Performance photo 8">
                 </div>
             </div>
         </section>
@@ -99,7 +99,7 @@
         <div class="container">
             <p>© 2025 Sagar Raina. All rights reserved.</p>
             <div class="social-links">
-                <a href="https://www.instagram.com/rainasagar/" target="_blank" title="Instagram"><img src="C:\Users\raina\OneDrive\Pictures\Screenshots 1\Screenshot 2025-07-04 123443.png" alt="Instagram"></a>
+                <a href="https://www.instagram.com/rainasagar/" target="_blank" title="Instagram"><img src="Screenshot 2025-07-04 123443.png" alt="Instagram"></a>
             </div>
         </div>
     </footer>
