--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Artist Name | Singer & Live Musician</title>
+    <title>Sagar Raina | Singer & Live Musician</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
         <div id="particles-js"></div>
 
         <div class="hero-content">
-            <img src="sagar.png" alt="Your Artist Name" class="artist-image animate-on-scroll">
+            <img src="sagar.png" alt="Sagar Raina" class="artist-image animate-on-scroll">
             <h1 class="animate-on-scroll">Sagar Raina</h1>
             <p class="tagline animate-on-scroll">Soulful Singer for Unforgettable Events</p>
             <a href="#contact" class="button animate-on-scroll">Book Me</a>
