--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sagar Raina | Singer & Live Musician</title>
+    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
@@ -12,86 +15,90 @@
 <body>
 
     <header class="hero">
-        <div id="particles-js"></div>
-
+        <div id="hero-particles" class="particles-bg"></div>
         <div class="hero-content">
             <img src="sagar.png" alt="Sagar Raina" class="artist-image animate-on-scroll">
             <h1 class="animate-on-scroll">Sagar Raina</h1>
             <p class="tagline animate-on-scroll">Soulful Singer for Unforgettable Events</p>
-            <a href="#contact" class="button animate-on-scroll">Book Me</a>
+            <a href="#contact" class="button animate-on-scroll">Book Now</a>
         </div>
     </header>
 
     <main>
         <section id="about" class="section section-with-bg">
+            <div id="about-particles" class="particles-bg"></div>
             <div class="container animate-on-scroll">
                 <h2>About Me</h2>
-                <p>With over a decade of professional performance experience, I specialize in creating the perfect musical atmosphere for any event. My soulful voice and versatile repertoire have been the highlight of countless weddings, corporate functions, private parties, and intimate cafe gatherings.
-
-                    Understanding that every event is unique, I pride myself on offering a fully customizable playlist. I work closely with you to tailor a setlist that perfectly matches the mood and style you envision, ensuring a memorable experience for you and your guests.</p>
+                <p>With over a decade of professional performance experience, I specialize in creating the perfect musical atmosphere for any event. My soulful voice and versatile repertoire have been the highlight of countless weddings, corporate functions, private parties, and intimate cafe gatherings.</p>
             </div>
 
-            <div class="scroller-container">
-                <div class="scroller-inner">
-                    <img src="placeholder1.png" alt="Performance photo 1">
-                    <img src="placeholder2.png" alt="Performance photo 2">
-                    <img src="placeholder3.png" alt="Performance photo 3">
-                    <img src="placeholder4.png" alt="Performance photo 4">
-                    <img src="placeholder5.png" alt="Performance photo 5">
-                    <img src="placeholder6.png" alt="Performance photo 6">
-                    <img src="placeholder7.png" alt="Performance photo 7">
-                    <img src="placeholder8.png" alt="Performance photo 8">
+            <div class="swiper">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide"><img src="placeholder1.png" alt="Performance photo 1"></div>
+                    <div class="swiper-slide"><img src="placeholder2.png" alt="Performance photo 2"></div>
+                    <div class="swiper-slide"><img src="placeholder3.png" alt="Performance photo 3"></div>
+                    <div class="swiper-slide"><img src="placeholder4.png" alt="Performance photo 4"></div>
+                    <div class="swiper-slide"><img src="placeholder5.png" alt="Performance photo 5"></div>
+                    <div class="swiper-slide"><img src="placeholder6.png" alt="Performance photo 6"></div>
+                    <div class="swiper-slide"><img src="placeholder7.png" alt="Performance photo 7"></div>
+                    <div class="swiper-slide"><img src="placeholder8.png" alt="Performance photo 8"></div>
+                    <div class="swiper-slide"><img src="appreciation.png" alt="Performance photo 9"></div>
+                    <div class="swiper-slide"><img src="placeholder1.png" alt="Performance photo 1"></div>
+                    <div class="swiper-slide"><img src="placeholder2.png" alt="Performance photo 2"></div>
+                    <div class="swiper-slide"><img src="placeholder3.png" alt="Performance photo 3"></div>
+                    <div class="swiper-slide"><img src="placeholder4.png" alt="Performance photo 4"></div>
+                    <div class="swiper-slide"><img src="placeholder5.png" alt="Performance photo 5"></div>
+                    <div class="swiper-slide"><img src="placeholder6.png" alt="Performance photo 6"></div>
+                    <div class="swiper-slide"><img src="placeholder7.png" alt="Performance photo 7"></div>
+                    <div class="swiper-slide"><img src="placeholder8.png" alt="Performance photo 8"></div>
+                    <div class="swiper-slide"><img src="appreciation.png" alt="Performance photo 9"></div>
+                    <div class="swiper-slide"><img src="placeholder1.png" alt="Performance photo 1"></div>
+                    <div class="swiper-slide"><img src="placeholder2.png" alt="Performance photo 2"></div>
+                    <div class="swiper-slide"><img src="placeholder3.png" alt="Performance photo 3"></div>
+                    <div class="swiper-slide"><img src="placeholder4.png" alt="Performance photo 4"></div>
+                    <div class="swiper-slide"><img src="placeholder5.png" alt="Performance photo 5"></div>
+                    <div class="swiper-slide"><img src="placeholder6.png" alt="Performance photo 6"></div>
+                    <div class="swiper-slide"><img src="placeholder7.png" alt="Performance photo 7"></div>
+                    <div class="swiper-slide"><img src="placeholder8.png" alt="Performance photo 8"></div>
+                    <div class="swiper-slide"><img src="appreciation.png" alt="Performance photo 9"></div>
                 </div>
             </div>
         </section>
 
         <section id="portfolio" class="section bg-dark">
+            <div id="portfolio-particles" class="particles-bg"></div>
             <div class="container">
                 <h2 class="animate-on-scroll">Performances</h2>
                 <div class="video-grid">
-                    <div class="video-container animate-on-scroll">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/NqYmCqWOHtQ?si=eD1qdTlP4SXdn4oV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                    </div>
-                    <div class="video-container animate-on-scroll">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/h2BP7r78csc?si=H_5opBQFob7QgcSu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                    </div>
-                    <div class="video-container animate-on-scroll">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/VqYd2rn-OTE?si=gRILvHF4RMmD_Uh8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                    </div>
+                    <div class="video-container animate-on-scroll"><iframe width="560" height="315" src="https://www.youtube.com/embed/NqYmCqWOHtQ?si=TH_1Y430pUSexefg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+                    <div class="video-container animate-on-scroll"><iframe width="560" height="315" src="https://www.youtube.com/embed/h2BP7r78csc?si=82temvkpxh2t0NAG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+                    <div class="video-container animate-on-scroll"><iframe width="560" height="315" src="https://www.youtube.com/embed/VqYd2rn-OTE?si=UBfIz08ewDU0IPHn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+                    <div class="video-container animate-on-scroll"><iframe width="560" height="315" src="https://www.youtube.com/embed/PdW42ngU5Tc?si=VNeuSHKbdToJ8OCq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
                 </div>
             </div>
         </section>
 
         <section id="services" class="section section-with-bg">
+            <div id="services-particles" class="particles-bg"></div>
             <div class="container animate-on-scroll">
                 <h2>Services</h2>
                 <p>I specialize in providing the perfect musical backdrop for a diverse range of events, such as:</p>
                 <ul class="services-list">
-                    <li>Weddings</li>
-                    <li>Corporate Events</li>
-                    <li>Private Parties</li>
-                    <li>Live Music Venues</li>
-                    <li>And more! Let's discuss your needs.</li>
+                    <li>Weddings</li><li>Corporate Events</li><li>Private Parties</li><li>Live Music Venues</li><li>And more! Let's discuss your needs.</li>
                 </ul>
             </div>
         </section>
 
         <section id="contact" class="section bg-dark">
-            <div class="container animate-on-scroll">
-                <h2>Book Me</h2>
-                <p>Ready to bring a memorable musical experience to your event? Let's connect directly.</p>
-
+            <div id="contact-particles" class="particles-bg"></div>
+            <div class="container">
+                <h2 class="animate-on-scroll">Book Now</h2>
+                <p class="animate-on-scroll">Ready to bring a memorable musical experience to your event? Let's connect directly.</p>
                 <div class="contact-details-grid">
-                    <div class="contact-item">
-                        <h3>Contact Number</h3>
-                        <p><a href="tel:+910000000000">9711032905</a></p>
-                    </div>
-                    <div class="contact-item">
-                        <h3>Email</h3>
-                        <p><a href="mailto:your.email@example.com">rainasagar7@gmail.com</a></p>
-                    </div>
+                    <div class="contact-item animate-on-scroll"><h3>Contact Number</h3><p><a href="tel:9711032905">9711032905</a></p></div>
+                    <div class="contact-item animate-on-scroll"><h3>Email</h3><p><a href="mailto:rainasagar7@gmail.com">rainasagar7@gmail.com</a></p></div>
                 </div>
-                </div>
+            </div>
         </section>
     </main>
 
@@ -99,14 +106,13 @@
         <div class="container">
             <p>© 2025 Sagar Raina. All rights reserved.</p>
             <div class="social-links">
-                <a href="https://www.instagram.com/rainasagar/" target="_blank" title="Instagram"><img src="Screenshot 2025-07-04 123443.png" alt="Instagram"></a>
+                <a href="https://www.instagram.com/rainasagar/" target="_blank" title="Instagram"><img src="instagram.png" alt="Instagram"></a>
             </div>
         </div>
     </footer>
 
-    <script src="http://googleusercontent.com/particles.min.js"></script>
-    <script src="particles-config.js"></script>
-    
+    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
