--- a/index.html
+++ b/index.html
@@ -95,7 +95,11 @@
                 <h2 class="animate-on-scroll">Book Now</h2>
                 <p class="animate-on-scroll">Ready to bring a memorable musical experience to your event? Let's connect directly.</p>
                 <div class="contact-details-grid">
-                    <div class="contact-item animate-on-scroll"><h3>Contact Number</h3><p><a href="tel:9711032905">9711032905</a></p></div>
+                    <div class="contact-item animate-on-scroll">
+                        <h3>Contact Number</h3>
+                        <p><a href="tel:9711032905">9711032905</a></p>
+                        <p><a href="tel:+910000099999">6005036394</a></p>
+                    </div>
                     <div class="contact-item animate-on-scroll"><h3>Email</h3><p><a href="mailto:rainasagar7@gmail.com">rainasagar7@gmail.com</a></p></div>
                 </div>
             </div>
