--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     <div class="contact-item animate-on-scroll">
                         <h3>Contact Number</h3>
                         <p><a href="tel:9711032905">9711032905</a></p>
-                        <p><a href="tel:+910000099999">6005036394</a></p>
+                        <p><a href="tel:6005036394">6005036394</a></p>
                     </div>
                     <div class="contact-item animate-on-scroll"><h3>Email</h3><p><a href="mailto:rainasagar7@gmail.com">rainasagar7@gmail.com</a></p></div>
                 </div>
