--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="live singer, musician, Gurugram, Delhi NCR, wedding singer, corporate events, acoustic performer, Sagar Raina">
     <title>Sagar Raina | Live Singer & Musician for Events in Delhi NCR</title>
     
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
@@ -24,7 +25,7 @@
     <header class="hero">
         <div id="hero-particles" class="particles-bg"></div>
         <div class="hero-content">
-            <img src="sagar.png" alt="Sagar Raina" class="artist-image animate-on-scroll">
+            <img src="sagar.png" alt="Sagar Raina performing with an acoustic guitar at an event" class="artist-image animate-on-scroll">
             <h1 class="animate-on-scroll">Sagar Raina</h1>
             <p class="tagline animate-on-scroll">Soulful Singer for Unforgettable Events</p>
             <a href="#contact" class="button animate-on-scroll">Book Now</a>
