--- a/index.html
+++ b/index.html
@@ -127,5 +127,13 @@
     <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="script.js"></script>
+
+    <!-- WhatsApp floating button -->
+    <a href="https://wa.me/919711032905?text=Hello%20Sagar%2C%20I%20want%20to%20connect%20regarding%20live%20music!" class="whatsapp-float" target="_blank" rel="noopener noreferrer" aria-label="Chat on WhatsApp">
+        <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
+            <path fill="#ffffff" d="M20.52 3.48A11.95 11.95 0 0012 0C5.373 0 0 5.373 0 12c0 2.115.55 4.09 1.597 5.844L0 24l6.453-1.646A11.962 11.962 0 0012 24c6.627 0 12-5.373 12-12 0-3.214-1.254-6.216-3.48-8.52zM12 21.5c-1.87 0-3.68-.5-5.24-1.448l-.37-.217L3 20l.18-3.41-.21-.36A9.287 9.287 0 012.5 12c0-5.247 4.253-9.5 9.5-9.5 5.247 0 9.5 4.253 9.5 9.5 0 5.247-4.253 9.5-9.5 9.5z"/>
+            <path fill="#ffffff" d="M17.472 14.382c-.297-.148-1.758-.867-2.03-.967-.273-.099-.472-.148-.672.148-.198.297-.768.966-.942 1.164-.173.198-.347.223-.644.075-.297-.148-1.255-.462-2.39-1.475-.885-.788-1.48-1.761-1.653-2.058-.173-.297-.018-.458.13-.604.134-.133.298-.347.447-.52.149-.173.198-.297.298-.495.099-.198 0-.372-.05-.52-.05-.148-.672-1.612-.92-2.206-.242-.579-.487-.5-.672-.51l-.572-.01c-.198 0-.52.074-.792.372s-1.04 1.016-1.04 2.479 1.065 2.876 1.213 3.074c.148.198 2.095 3.2 5.076 4.487.709.306 1.26.489 1.691.626.71.226 1.357.194 1.87.118.571-.085 1.758-.719 2.006-1.414.248-.695.248-1.29.173-1.414-.074-.124-.273-.198-.57-.346z"/>
+        </svg>
+    </a>
 </body>
 </html>
