improved performance and seo

--- a/index.html
+++ b/index.html
@@ -4,8 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="live singer, musician, Gurugram, Delhi NCR, wedding singer, corporate events, acoustic performer, Sagar Raina">
+    <meta name="description" content="Book Sagar Raina, a soulful live singer and musician in Delhi NCR for weddings, corporate events, private parties, and intimate gigs.">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://sagarraina.in/">
     <title>Sagar Raina | Live Singer & Musician for Events in Delhi NCR</title>
-    
+
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Sagar Raina | Live Singer & Musician for Events in Delhi NCR">
+    <meta property="og:description" content="Book Sagar Raina for weddings, corporate events, and private parties across Delhi NCR.">
+    <meta property="og:url" content="https://sagarraina.in/">
+    <meta property="og:image" content="https://sagarraina.in/sagar.png">
+    <meta property="og:image:alt" content="Sagar Raina performing with an acoustic guitar">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Sagar Raina | Live Singer & Musician">
+    <meta name="twitter:description" content="Live singer for weddings, corporate events, and private parties in Delhi NCR.">
+    <meta name="twitter:image" content="https://sagarraina.in/sagar.png">
+
+    <link rel="preload" as="image" href="sagar.png" imagesrcset="sagar.png 1x" fetchpriority="high">
+
+    <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin>
+    <link rel="dns-prefetch" href="https://cdn.jsdelivr.net">
+    <link rel="preconnect" href="https://www.youtube.com" crossorigin>
+    <link rel="dns-prefetch" href="https://www.youtube.com">
+    <link rel="preconnect" href="https://i.ytimg.com" crossorigin>
+    <link rel="dns-prefetch" href="https://i.ytimg.com">
+    <link rel="preconnect" href="https://www.googletagmanager.com" crossorigin>
+    <link rel="dns-prefetch" href="https://www.googletagmanager.com">
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,13 +45,32 @@
       gtag('js', new Date());
       gtag('config', 'G-1NRBMJJQSW');
     </script>
+        <script type="application/ld+json">
+            {
+                "@context": "https://schema.org",
+                "@type": "Person",
+                "name": "Sagar Raina",
+                "jobTitle": "Live Singer & Musician",
+                "image": "https://sagarraina.in/sagar.png",
+                "url": "https://sagarraina.in/",
+                "email": "mailto:rainasagar7@gmail.com",
+                "telephone": "+91-9711032905",
+                "sameAs": [
+                    "https://www.instagram.com/rainasagar/"
+                ],
+                "areaServed": [
+                    "Delhi NCR",
+                    "Gurugram"
+                ]
+            }
+        </script>
 </head>
 <body>
 
     <header class="hero">
         <div id="hero-particles" class="particles-bg"></div>
         <div class="hero-content">
-            <img src="sagar.png" alt="Sagar Raina performing with an acoustic guitar at an event" class="artist-image animate-on-scroll">
+            <img src="sagar.png" alt="Sagar Raina performing with an acoustic guitar at an event" class="artist-image animate-on-scroll" width="300" height="360" decoding="async" fetchpriority="high">
             <h1 class="animate-on-scroll">Sagar Raina</h1>
             <p class="tagline animate-on-scroll">Soulful Singer for Unforgettable Events</p>
             <a href="#contact" class="button animate-on-scroll">Book Now</a>
@@ -42,33 +87,33 @@
 
             <div class="swiper">
                 <div class="swiper-wrapper">
-                    <div class="swiper-slide"><img src="placeholder1.png" alt="Performance photo 1"></div>
-                    <div class="swiper-slide"><img src="placeholder2.png" alt="Performance photo 2"></div>
-                    <div class="swiper-slide"><img src="placeholder3.png" alt="Performance photo 3"></div>
-                    <div class="swiper-slide"><img src="placeholder4.png" alt="Performance photo 4"></div>
-                    <div class="swiper-slide"><img src="placeholder5.png" alt="Performance photo 5"></div>
-                    <div class="swiper-slide"><img src="placeholder6.png" alt="Performance photo 6"></div>
-                    <div class="swiper-slide"><img src="placeholder7.png" alt="Performance photo 7"></div>
-                    <div class="swiper-slide"><img src="placeholder8.png" alt="Performance photo 8"></div>
-                    <div class="swiper-slide"><img src="appreciation.png" alt="Performance photo 9"></div>
-                    <div class="swiper-slide"><img src="placeholder1.png" alt="Performance photo 1"></div>
-                    <div class="swiper-slide"><img src="placeholder2.png" alt="Performance photo 2"></div>
-                    <div class="swiper-slide"><img src="placeholder3.png" alt="Performance photo 3"></div>
-                    <div class="swiper-slide"><img src="placeholder4.png" alt="Performance photo 4"></div>
-                    <div class="swiper-slide"><img src="placeholder5.png" alt="Performance photo 5"></div>
-                    <div class="swiper-slide"><img src="placeholder6.png" alt="Performance photo 6"></div>
-                    <div class="swiper-slide"><img src="placeholder7.png" alt="Performance photo 7"></div>
-                    <div class="swiper-slide"><img src="placeholder8.png" alt="Performance photo 8"></div>
-                    <div class="swiper-slide"><img src="appreciation.png" alt="Performance photo 9"></div>
-                    <div class="swiper-slide"><img src="placeholder1.png" alt="Performance photo 1"></div>
-                    <div class="swiper-slide"><img src="placeholder2.png" alt="Performance photo 2"></div>
-                    <div class="swiper-slide"><img src="placeholder3.png" alt="Performance photo 3"></div>
-                    <div class="swiper-slide"><img src="placeholder4.png" alt="Performance photo 4"></div>
-                    <div class="swiper-slide"><img src="placeholder5.png" alt="Performance photo 5"></div>
-                    <div class="swiper-slide"><img src="placeholder6.png" alt="Performance photo 6"></div>
-                    <div class="swiper-slide"><img src="placeholder7.png" alt="Performance photo 7"></div>
-                    <div class="swiper-slide"><img src="placeholder8.png" alt="Performance photo 8"></div>
-                    <div class="swiper-slide"><img src="appreciation.png" alt="Performance photo 9"></div>
+                    <div class="swiper-slide"><img src="placeholder1.png" alt="Performance photo 1" width="200" height="300" loading="lazy" decoding="async"></div>
+                    <div class="swiper-slide"><img src="placeholder2.png" alt="Performance photo 2" width="200" height="300" loading="lazy" decoding="async"></div>
+                    <div class="swiper-slide"><img src="placeholder3.png" alt="Performance photo 3" width="200" height="300" loading="lazy" decoding="async"></div>
+                    <div class="swiper-slide"><img src="placeholder4.png" alt="Performance photo 4" width="200" height="300" loading="lazy" decoding="async"></div>
+                    <div class="swiper-slide"><img src="placeholder5.png" alt="Performance photo 5" width="200" height="300" loading="lazy" decoding="async"></div>
+                    <div class="swiper-slide"><img src="placeholder6.png" alt="Performance photo 6" width="200" height="300" loading="lazy" decoding="async"></div>
+                    <div class="swiper-slide"><img src="placeholder7.png" alt="Performance photo 7" width="200" height="300" loading="lazy" decoding="async"></div>
+                    <div class="swiper-slide"><img src="placeholder8.png" alt="Performance photo 8" width="200" height="300" loading="lazy" decoding="async"></div>
+                    <div class="swiper-slide"><img src="appreciation.png" alt="Performance photo 9" width="200" height="300" loading="lazy" decoding="async"></div>
+                    <div class="swiper-slide"><img src="placeholder1.png" alt="Performance photo 1" width="200" height="300" loading="lazy" decoding="async"></div>
+                    <div class="swiper-slide"><img src="placeholder2.png" alt="Performance photo 2" width="200" height="300" loading="lazy" decoding="async"></div>
+                    <div class="swiper-slide"><img src="placeholder3.png" alt="Performance photo 3" width="200" height="300" loading="lazy" decoding="async"></div>
+                    <div class="swiper-slide"><img src="placeholder4.png" alt="Performance photo 4" width="200" height="300" loading="lazy" decoding="async"></div>
+                    <div class="swiper-slide"><img src="placeholder5.png" alt="Performance photo 5" width="200" height="300" loading="lazy" decoding="async"></div>
+                    <div class="swiper-slide"><img src="placeholder6.png" alt="Performance photo 6" width="200" height="300" loading="lazy" decoding="async"></div>
+                    <div class="swiper-slide"><img src="placeholder7.png" alt="Performance photo 7" width="200" height="300" loading="lazy" decoding="async"></div>
+                    <div class="swiper-slide"><img src="placeholder8.png" alt="Performance photo 8" width="200" height="300" loading="lazy" decoding="async"></div>
+                    <div class="swiper-slide"><img src="appreciation.png" alt="Performance photo 9" width="200" height="300" loading="lazy" decoding="async"></div>
+                    <div class="swiper-slide"><img src="placeholder1.png" alt="Performance photo 1" width="200" height="300" loading="lazy" decoding="async"></div>
+                    <div class="swiper-slide"><img src="placeholder2.png" alt="Performance photo 2" width="200" height="300" loading="lazy" decoding="async"></div>
+                    <div class="swiper-slide"><img src="placeholder3.png" alt="Performance photo 3" width="200" height="300" loading="lazy" decoding="async"></div>
+                    <div class="swiper-slide"><img src="placeholder4.png" alt="Performance photo 4" width="200" height="300" loading="lazy" decoding="async"></div>
+                    <div class="swiper-slide"><img src="placeholder5.png" alt="Performance photo 5" width="200" height="300" loading="lazy" decoding="async"></div>
+                    <div class="swiper-slide"><img src="placeholder6.png" alt="Performance photo 6" width="200" height="300" loading="lazy" decoding="async"></div>
+                    <div class="swiper-slide"><img src="placeholder7.png" alt="Performance photo 7" width="200" height="300" loading="lazy" decoding="async"></div>
+                    <div class="swiper-slide"><img src="placeholder8.png" alt="Performance photo 8" width="200" height="300" loading="lazy" decoding="async"></div>
+                    <div class="swiper-slide"><img src="appreciation.png" alt="Performance photo 9" width="200" height="300" loading="lazy" decoding="async"></div>
                 </div>
             </div>
         </section>
@@ -78,11 +123,46 @@
             <div class="container">
                 <h2 class="animate-on-scroll">Performances</h2>
                 <div class="video-grid">
-                    <div class="video-container animate-on-scroll"><iframe width="560" height="315" src="https://www.youtube.com/embed/NqYmCqWOHtQ?si=TH_1Y430pUSexefg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
-                    <div class="video-container animate-on-scroll"><iframe width="560" height="315" src="https://www.youtube.com/embed/h2BP7r78csc?si=82temvkpxh2t0NAG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
-                    <div class="video-container animate-on-scroll"><iframe width="560" height="315" src="https://www.youtube.com/embed/VqYd2rn-OTE?si=UBfIz08ewDU0IPHn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
-                    <div class="video-container animate-on-scroll"><iframe width="560" height="315" src="https://www.youtube.com/embed/PdW42ngU5Tc?si=VNeuSHKbdToJ8OCq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
-                    <div class="video-container animate-on-scroll"><iframe width="560" height="315" src="https://www.youtube.com/embed/tkD62VApScM?si=k9TbMCKyEczV0jq7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+                    <div class="video-container animate-on-scroll">
+                        <div class="video-embed" data-video-id="NqYmCqWOHtQ" data-video-title="Live performance 1">
+                            <img src="https://i.ytimg.com/vi/NqYmCqWOHtQ/hqdefault.jpg" alt="Live performance 1" width="560" height="315" loading="lazy" decoding="async">
+                            <button class="video-embed__button" type="button" aria-label="Play video: Live performance 1">
+                                <span class="video-embed__icon" aria-hidden="true"></span>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="video-container animate-on-scroll">
+                        <div class="video-embed" data-video-id="h2BP7r78csc" data-video-title="Live performance 2">
+                            <img src="https://i.ytimg.com/vi/h2BP7r78csc/hqdefault.jpg" alt="Live performance 2" width="560" height="315" loading="lazy" decoding="async">
+                            <button class="video-embed__button" type="button" aria-label="Play video: Live performance 2">
+                                <span class="video-embed__icon" aria-hidden="true"></span>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="video-container animate-on-scroll">
+                        <div class="video-embed" data-video-id="VqYd2rn-OTE" data-video-title="Live performance 3">
+                            <img src="https://i.ytimg.com/vi/VqYd2rn-OTE/hqdefault.jpg" alt="Live performance 3" width="560" height="315" loading="lazy" decoding="async">
+                            <button class="video-embed__button" type="button" aria-label="Play video: Live performance 3">
+                                <span class="video-embed__icon" aria-hidden="true"></span>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="video-container animate-on-scroll">
+                        <div class="video-embed" data-video-id="PdW42ngU5Tc" data-video-title="Live performance 4">
+                            <img src="https://i.ytimg.com/vi/PdW42ngU5Tc/hqdefault.jpg" alt="Live performance 4" width="560" height="315" loading="lazy" decoding="async">
+                            <button class="video-embed__button" type="button" aria-label="Play video: Live performance 4">
+                                <span class="video-embed__icon" aria-hidden="true"></span>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="video-container animate-on-scroll">
+                        <div class="video-embed" data-video-id="tkD62VApScM" data-video-title="Live performance 5">
+                            <img src="https://i.ytimg.com/vi/tkD62VApScM/hqdefault.jpg" alt="Live performance 5" width="560" height="315" loading="lazy" decoding="async">
+                            <button class="video-embed__button" type="button" aria-label="Play video: Live performance 5">
+                                <span class="video-embed__icon" aria-hidden="true"></span>
+                            </button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -119,14 +199,14 @@
         <div class="container">
             <p>© 2025 Sagar Raina. All rights reserved.</p>
             <div class="social-links">
-                <a href="https://www.instagram.com/rainasagar/" target="_blank" title="Instagram"><img src="instagram.png" alt="Instagram"></a>
+                <a href="https://www.instagram.com/rainasagar/" target="_blank" title="Instagram"><img src="instagram.png" alt="Instagram" width="30" height="30" loading="lazy" decoding="async"></a>
             </div>
         </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="script.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script defer src="script.js"></script>
 
     <!-- WhatsApp floating button -->
     <a href="https://wa.me/919711032905?text=Hello%20Sagar%2C%20I%20want%20to%20connect%20regarding%20live%20music!" class="whatsapp-float" target="_blank" rel="noopener noreferrer" aria-label="Chat on WhatsApp">
